force-app/main/default/objects/SBQQ__QuoteLineGroup__c/fields/SBQQ__NetTotal__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__NetTotal__c</fullName>
    <description>Total for this group&#39;s line items after all discounts are applied.</description>
    <inlineHelpText>Total for this group&#39;s line items after all discounts are applied.</inlineHelpText>
    <label>Net Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>