force-app/main/default/objects/SBQQ__QuoteLineGroup__c/validationRules/PreventQuoteLineGroupModifications.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventQuoteLineGroupModifications</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
TEXT( SBQQ__Quote__r.SBQQ__Status__c ) = &quot;Approval Pending&quot;,
TEXT( SBQQ__Quote__r.SBQQ__Status__c ) = &quot;Approved&quot;,
TEXT( SBQQ__Quote__r.SBQQ__Status__c ) = &quot;Rejected&quot;,
TEXT( SBQQ__Quote__r.SBQQ__Status__c ) = &quot;Denied&quot;,
TEXT( SBQQ__Quote__r.SBQQ__Status__c ) = &quot;Accepted&quot;
)</errorConditionFormula>
    <errorMessage>The Quote line Group items cannot be modified because the parent Quote’s status is Approval Pending,Approved,Rejected, Accepted, or Denied.</errorMessage>
</ValidationRule>